Made landing page

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Muli|Roboto&display=swap"
+      href="https://fonts.googleapis.com/css?family=Muli:400,500,600|Roboto&display=swap"
       rel="stylesheet"
     />
     <title>Trash Panda</title>
