Adding google analytics script tag in head

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,21 @@
       rel="stylesheet"
     />
     <title>Trash Panda</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QXB3ZDNTWZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-QXB3ZDNTWZ");
+    </script>
   </head>
 
   <body>
