Add favicons and update manifest

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,33 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="./manifest.json" />
+    <title>Trash Panda</title>
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="shortcut icon" href="./favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png?v=PYqlOBb5Yz"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png?v=PYqlOBb5Yz"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png?v=PYqlOBb5Yz"
+    />
+    <link rel="shortcut icon" href="./favicon.ico?v=PYqlOBb5Yz" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <link
       href="https://fonts.googleapis.com/css?family=Muli:400,500,600|Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Trash Panda</title>
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
