Move sw to top level of site

--- a/public/index.html
+++ b/public/index.html
@@ -60,5 +60,19 @@
     </noscript>
     <div id="root"></div>
     <script type="text/javascript" src="../src/index.js"></script>
+    <script type="text/javascript">
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("./sw.js")
+            .then(registration => {
+              console.log("SW registered: ", registration);
+            })
+            .catch(registrationError => {
+              console.log("SW registration failed: ", registrationError);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
