--- a/public/index.html
+++ b/public/index.html
@@ -60,18 +60,29 @@
     </noscript>
     <div id="root"></div>
     <script type="text/javascript" src="../src/index.js"></script>
-    <script type="text/javascript">
+    <script type="module">
+      import { Workbox } from "https://storage.googleapis.com/workbox-cdn/releases/5.0.0/workbox-window.prod.mjs";
+
       if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-            .register("./sw.js")
-            .then(registration => {
-              console.log("SW registered: ", registration);
-            })
-            .catch(registrationError => {
-              console.log("SW registration failed: ", registrationError);
-            });
+        const wb = new Workbox("/sw.js");
+
+        // Add an event listener to detect when the registered
+        // service worker has installed but is waiting to activate.
+        wb.addEventListener("waiting", event => {
+          // set up a listener that will reload the page as soon as the
+          //previously waiting service worker has taken control.
+          wb.addEventListener("controlling", event => {
+            window.location.reload();
+          });
+
+          // Send a message telling the service worker to skip waiting.
+          // This will trigger the `controlling` event handler above.
+          // Note: for this to work, you have to add a message
+          // listener in your service worker. See below.
+          wb.messageSW({ type: "SKIP_WAITING" });
         });
+
+        wb.register();
       }
     </script>
   </body>
