--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link
-      href="https://fonts.googleapis.com/css?family=Muli:400,500,600|Roboto&display=swap"
+      href="https://fonts.googleapis.com/css?family=Muli:400,600,700&display=swap"
       rel="stylesheet"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
